@@ -411,8 +411,8 @@ EXPRATE=6
 # The CORPSEGUARD string is used to determine who may loot the 
 # corpses of dead players.  Use ALL to allow anyone to loot
 # them (default), SELFONLY will only allow the players to loot
-# their own corpses,  PKONLY flag will allow the players, or 
-# other players with the playerkill flag turned on, to loot.
+# their own corpses, and the PKONLY flag will allow the players, or 
+# other players with the playerkill flag turned on to loot.
 CORPSEGUARD=ALL
 
 # The ITEMLOOTPOLICY is left blank to not implement any item-loss
