@@ -1796,6 +1796,19 @@ whole world will be checked.  If the word items is used, then an item \
 can also be transported to a room destination, though the word INVENTORY \
 is also a valid destination to move the item into your inventory.
 
+OUTFIT=\
+Command : OUTFIT\n\r\
+Usage   : OUTFIT (([LEVEL]) [NAME])\n\r\
+Example : outfit\n\r\
+Example : outfit 15 bob\n\r\
+Example : outfit bob\n\r\
+Short(s): \n\r\
+Should your character or the targeted character ever be without clothing or weapon (usually \
+due to death), this command will give your character some newbie \
+equipment to get by with, or level appropriate equipment when a player or mob is targeted \
+by name by the builder.  The mundane player version of this only gives level 1 equipment \
+to the player using the command.
+
 WIZEMOTE=\
 Command : WIZEMOTE\n\r\
 Usage   : WIZEMOTE [ALL/HERE/ROOM NAME/AREA NAME/CLAN NAME/PLAYER NAME] message\n\r\
