@@ -46,6 +46,7 @@
  44. New prayers: Planar Pilgrimage
  45. New Thief skills: Use Potion
  46. New class: Reliquist
+ 47. Builder version of OUTFIT can now be targeted, and give metacrafted gear
  
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
